# mini-slurm

./: .gitignore  LICENSE  MANIFEST.in  README.md  examples.py  mini-slurm.py  pyproject.toml
.github/workflows/: python-package.yml
config/: README.md  topology.conf.example
docs/: ARCHITECTURE.md  ELASTIC_JOBS.md  GUIDE.md  MACBOOK_AIR_GUIDE.md  QUICK_START.md  QUICK_TEST.md  STRUCTURE.md  TESTING_GUIDE.md  TEST_RESULTS.md  TEST_RESULTS_TOPOLOGY.md  TOPOLOGY.md  VIEW_DATABASE.md  VIEW_LOGS.md
scripts/: demo.py  release.sh  view_logs.py
src/mini_slurm/: __init__.py  cli.py  core.py  database.py  utils.py
tasks/: README.md  data_processing.py  elastic_training.py  image_processing.py  matrix_operations.py  monte_carlo_simulation.py  scientific_computing.py  train_neural_network.py
tests/: README.md  test_elastic.sh  test_elastic_manual.sh  test_elastic_simple.py  test_local.sh  test_scaling.py  test_workloads.sh
tests/topology/: test_topology_direct.py  test_topology_elastic.py  test_topology_simple.sh  test_workload.py
