[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-slorm"
version = "0.1.4"
description = "A lightweight, local job scheduler inspired by SLURM for managing AI/ML workloads"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "InduVarshini", email = "indu.varshini04@gmail.com"}
]
keywords = ["scheduler", "hpc", "job-queue", "slurm", "ai", "ml", "workload"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/InduVarshini/mini-slurm"
Documentation = "https://github.com/InduVarshini/mini-slurm#readme"
Repository = "https://github.com/InduVarshini/mini-slurm"
Issues = "https://github.com/InduVarshini/mini-slurm/issues"

[project.scripts]
mini-slurm = "mini_slurm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
